gts-macros/tests/v2_compile_fail/version_mismatch.stderr
error: GtsSchema: version mismatch between struct name and schema_id. Struct 'UserV1' has version suffix 'V1' but schema_id 'gts.x.app.entities.user.v2~' has version 'v2'. The versions must match exactly (e.g., BaseEventV1 with v1~, or BaseEventV2_0 with v2.0~)
  --> tests/v2_compile_fail/version_mismatch.rs:11:12
   |
11 | pub struct UserV1 {
   |            ^^^^^^
